--- a/sass/base/_normalize.scss
+++ b/sass/base/_normalize.scss
@@ -16,27 +16,16 @@ b {
   font-size: 14px;
 }
 
-/*****************************
-a
-*****************************/
-
-a {
+a, a:link, a:visited, a:focus, a:hover, a:active {
+  color: $black;
   text-decoration: none;
   font-size: 14px;
 }
-
-/*****************************
-Div
-*****************************/
 
 div {
   width: 100%;
   display: block;
 }
-
-/*****************************
-Image
-*****************************/
 
 img {
   display: block;
